--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+server.port=8080
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.springframework=DEBUG
