--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ server.port=8080
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
+
+spring.jpa.show-sql=true
